<resources>
    <string name="app_name">Music Notes</string>
    <string name="album_name">Álbum</string>
    <string name="artist_name">Artista</string>
    <string name="album_cover">Capa</string>
    <string name="save_album_button">Salvar</string>
    <string name="album_review">O que você achou desse álbum?</string>
    <string name="circle_separator">•</string>
    <string name="updated_at_label">Última avaliação:</string>
    <string name="is_rated_flag">Avaliado</string>
    <string name="user_email">E-mail</string>
    <string name="user_password">Senha</string>
    <string name="login">Entrar</string>
    <string name="register">Criar conta</string>
    <string name="sign_out">Sair</string>
    <string name="search_hint">Artista ou álbum</string>
    <string name="add_tag_button">Nova tag</string>
    <string name="tag">Tag</string>
    <string name="load_more_button">Carregar mais</string>
    <string name="advanced_search">Busca avançada</string>
    <string name="confirm_password">Confirme a senha</string>
    <string name="fill_all_fields">Preencha todos os campos</string>
    <string name="basic_search">Busca simples</string>
    <string name="tags">Tags</string>
    <string name="rating">Nota</string>
    <string name="date_min">De</string>
    <string name="date_max">Até</string>
    <string name="filters">Filtros</string>
    <string name="year">Ano de lançamento</string>
    <string name="updated_at">Data da avaliação</string>
    <string name="check_flag">Marcar/desmarcar</string>
</resources>