<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/filterTagsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_padding">

        <TextView
            android:id="@+id/filterTagsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:textSize="16sp" />

    </RelativeLayout>

    <View style="@style/Divider.Horizontal" />

    <RelativeLayout
        android:id="@+id/filterRatingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_padding">

        <TextView
            android:id="@+id/filterRatingLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/filterRating"
            android:text="@string/rating"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/checkFilterRating"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/check_flag"
            android:src="@drawable/ic_baseline_check_24" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/filterRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/filterRatingLabel"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="10"
            app:values="@array/initial_slider_values" />

    </RelativeLayout>

    <View style="@style/Divider.Horizontal" />

    <RelativeLayout
        android:id="@+id/filterYearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_padding">

        <TextView
            android:id="@+id/filterYearLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/filterYearLayout"
            android:text="@string/year"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/filterYearLabel"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filterYearMinLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/main_padding"
                android:paddingEnd="@dimen/half_padding"
                android:paddingRight="@dimen/half_padding"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/filterYearMin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_min"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filterYearMaxLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/half_padding"
                android:paddingLeft="@dimen/half_padding"
                android:paddingTop="@dimen/main_padding"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/filterYearMax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_max"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </RelativeLayout>

    <View style="@style/Divider.Horizontal" />

    <RelativeLayout
        android:id="@+id/filterUpdatedAtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_padding">

        <TextView
            android:id="@+id/filterUpdatedAtLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/filterYearLayout"
            android:text="@string/updated_at"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/filterUpdatedAtLabel"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filterUpdatedAtMinLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/main_padding"
                android:paddingEnd="@dimen/half_padding"
                android:paddingRight="@dimen/half_padding"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/filterUpdatedAtMin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_min"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filterUpdatedAtMaxLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/half_padding"
                android:paddingLeft="@dimen/half_padding"
                android:paddingTop="@dimen/main_padding"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/filterUpdatedAtMax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_max"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>