<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/albumCover"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/album_cover"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/albumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="false"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/albumExtraInfoLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="false"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/albumInfoSeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/circle_separator"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/albumYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/isRatedFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/is_rated_flag"
        android:src="@drawable/ic_baseline_star_36"
        android:visibility="invisible" />

</LinearLayout>