<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ReviewFragment">

    <RelativeLayout
        android:id="@+id/layoutReview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/main_padding">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/album_cover"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/albumInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/cover"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/main_padding"
            android:layout_marginLeft="@dimen/main_padding"
            android:layout_toEndOf="@id/cover"
            android:layout_toRightOf="@id/cover"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:minLines="1"
                android:scrollHorizontally="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/artists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

        </LinearLayout>

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/albumInfo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/main_padding"
            android:numStars="5"
            android:stepSize="0.5" />

        <LinearLayout
            android:id="@+id/tagArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rating"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:id="@+id/chipGroupScrollView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupTags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <ImageButton
                android:id="@+id/buttonAddTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/rounded_corner"
                android:contentDescription="@string/add_tag_button"
                android:padding="4dp"
                android:src="@drawable/ic_add" />

        </LinearLayout>

        <EditText
            android:id="@+id/review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/fabSaveAlbum"
            android:layout_below="@id/tagArea"
            android:layout_marginTop="@dimen/main_padding"
            android:autofillHints="@string/album_review"
            android:cursorVisible="false"
            android:gravity="start|top"
            android:hint="@string/album_review"
            android:inputType="textMultiLine"
            android:paddingHorizontal="@dimen/half_padding"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/updatedAtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/fabSaveAlbum"
            android:layout_toStartOf="@id/fabSaveAlbum"
            android:layout_toLeftOf="@id/fabSaveAlbum">

            <TextView
                android:id="@+id/updatedAtLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated_at_label"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/updatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_marginLeft="4sp"
                android:textSize="12sp" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSaveAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/main_padding"
            android:layout_marginLeft="@dimen/main_padding"
            android:layout_marginTop="@dimen/main_padding"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/save_album_button"
            android:src="@drawable/ic_baseline_check_24" />

    </RelativeLayout>

    <include layout="@layout/fragment_progress_bar" />

</FrameLayout>